<resources>
    <!--
    - Global
    -->
    <string name="app_name">GeoRiddles</string>
    <string name="error_message">An error has occurred.</string>
    <string name="error_message_data">An error with data has occurred.</string>
    <string name="error_message_location">An error with location has occurred. We are sorry,  ut this application needs to know your location to function properly.</string>

    <string name="preferences">sk.dejw.android.georiddles.preferences</string>
    <string name="preference_key_game">sk.dejw.android.georiddles.preferences.game</string>
    <string name="preference_key_riddle">sk.dejw.android.georiddles.preferences.riddle</string>

    <!--
    - Content descriptions
    -->
    <string name="status_icon_solved">Solved riddle</string>
    <string name="status_icon_active">Active riddle</string>
    <string name="status_icon_location_checked">Location checked riddle</string>
    <string name="status_icon_disabled">Disabled riddle</string>
    <string name="search">Search</string>

    <!--
    - Main Activity
    -->
    <string name="welcome">Welcome to GeoRiddles</string>
    <string name="provide_code">Please provide the code for the game</string>
    <string name="placeholder_code">code</string>
    <string name="placeholder_game">Select a game</string>
    <string name="or">or</string>
    <string name="select_nearby">select from nearby games</string>
    <string name="btn_start_game">Start Game</string>
    <string name="spinner_dummy_text">Spinner text</string>

    <string name="code_not_found">Code not found.</string>

    <string name="confirm_dialog_title">Confirm game</string>
    <string name="confirm_dialog_text">Would you like to start the game with title: </string>
    <string name="confirm_dialog_cancel">Cancel</string>
    <string name="confirm_dialog_start_game">Start Game</string>
    <string name="no_nearby_games">We did not find near by games.</string>

    <string name="location_permissions_failed">The app will not work correctly, because the location is disabled.</string>

    <!--
    - Game Activity
    -->
    <string name="cannot_be_selected">This riddle cannot be selected for now.</string>

    <!--
    - Riddle Fragment
    -->
    <string name="tab_directions">Directions</string>
    <string name="tab_map">Map</string>
    <string name="tab_question">Question</string>

    <!--
    - Riddle Directions And Question Fragment
    -->
    <string name="location_label">Riddle GPS position</string>
    <string name="gps_lat_label">Lat:</string>
    <string name="gps_lng_label">Lng:</string>
    <string name="distance_label">Distance from riddle:</string>

    <string name="action_check_location">Check location</string>
    <string name="meters"> m</string>

    <string name="question_label">Question</string>
    <string name="check_the_answer">Check the answer</string>

    <string name="not_in_correct_location">Sorry, you are not near the correct location.</string>
    <string name="incorrect_answer">It is so sad, but your answer was wrong</string>

    <string name="correct_answer_dialog_title">Good job</string>
    <string name="correct_answer_dialog_text">Great, your answer is correct. Continue to the next riddle.</string>
    <string name="next_riddle">Next riddle</string>

    <string name="correct_answer_dialog_text_final">Great, your answer is correct. Your quest is over, you answered all riddles correctly. Please select another game.</string>
    <string name="finish">Finish</string>
    <string name="correct_answer">Correct answer is:</string>

    <!--
    - Widget
    -->
    <string name="widget_empty_view_text">Game not selected.</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_active_game">Your game is</string>
    <string name="widget_active_riddle">Go solve riddle</string>
    <string name="widget_active_riddle_solved">Great you have solved all riddles.</string>
    <string name="widget_solved">Your score:</string>
    <string name="widget_slash">/</string>

</resources>
