<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/riddle_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:visibility="gone">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_question_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:layout_marginLeft="@dimen/text_view_margin"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_marginStart="@dimen/text_view_margin"
            android:layout_marginTop="@dimen/question_margin_top"
            android:text="@string/question_label"
            android:textSize="@dimen/text_view_font_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:layout_marginLeft="@dimen/text_view_margin"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_marginStart="@dimen/text_view_margin"
            android:layout_marginTop="@dimen/question_margin_top"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_view_font_size_small"
            app:layout_constraintBottom_toTopOf="@+id/et_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_question_label"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:layout_marginLeft="@dimen/text_view_margin"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_marginStart="@dimen/text_view_margin"
            android:nextFocusDown="@id/bt_check"
            app:layout_constraintBottom_toTopOf="@+id/bt_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_check"
            android:layout_width="@dimen/question_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_button_margin_bottom"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:layout_marginLeft="@dimen/text_view_margin"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_marginStart="@dimen/text_view_margin"
            android:background="@color/colorPrimaryDark"
            android:drawableLeft="@drawable/ic_check_white_24dp"
            android:drawablePadding="@dimen/question_button_drawable_padding"
            android:drawableStart="@drawable/ic_check_white_24dp"
            android:nextFocusUp="@id/et_answer"
            android:paddingBottom="@dimen/question_button_padding_bottom"
            android:paddingEnd="@dimen/question_button_padding_right"
            android:paddingLeft="@dimen/question_button_padding_left"
            android:paddingRight="@dimen/question_button_padding_right"
            android:paddingStart="@dimen/question_button_padding_left"
            android:paddingTop="@dimen/question_button_padding_bottom"
            android:text="@string/check_the_answer"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_correct_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:layout_marginLeft="@dimen/text_view_margin"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_marginStart="@dimen/text_view_margin"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/bt_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/question_button_margin_bottom"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:layout_marginLeft="@dimen/text_view_margin"
            android:layout_marginRight="@dimen/text_view_margin"
            android:layout_marginStart="@dimen/text_view_margin"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/question_button_padding_bottom"
            android:paddingEnd="@dimen/question_button_padding_left"
            android:paddingLeft="@dimen/question_button_padding_left"
            android:paddingRight="@dimen/question_button_padding_left"
            android:paddingStart="@dimen/question_button_padding_left"
            android:paddingTop="@dimen/question_button_padding_bottom"
            android:text="@string/next_riddle"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>